[package]
name = "gerber2svg"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Gerber2Svg is a library and utility, used to convert a Gerber (x2 or x3) file into an SVG file."
homepage = "https://github.com/jnthbdn/rs-gerber2svg"
repository = "https://github.com/jnthbdn/rs-gerber2svg"
readme = "README.md"
keywords = ["gerber", "svg"]
categories = ["command-line-utilities"]

[[bin]]
name = "gerber2svg"
path = "src/main.rs"

[lib]
name = "gerber2svg"
path = "src/lib.rs"

[dependencies]
gerber_parser = "0.3.1"
log = "0.4.19"
simple_logger = "4.2.0"
structopt = { version = "0.3.26", features = ["color", "suggestions", "wrap_help"] }
svg = "0.13.1"
thiserror = "2.0.15"
